Build 34 (?)
- Changed the way building are constructed and sold. Now it's works exactly as in original game.

Build 33 (09.03.2013)
- Added Bion unit
- Added Plasma Rifle for Bion unit
- Fixed building upgrade bug
- Destroyed building leaves crater on land
- Building of Camera tower and bridges now not require Construction Rig destruction
- All bridge problems are solved
- Complete recreation of unit producing system
- Different small bugs fixed

Build 32 (06.03.2013)
- Units now can die and buildings now can be destroyed
- Added explosion effects for existing units
- Few attacking bugs fixed
- Field Hospital now can heal units

Build 31 (26.02.2013)
- Added mouse panning. It disabled by default, in order to enable it, go to "Special" tab
- Shooting sound optimizations
- Big structural change in unit object class
- Construction Rig don't need to move to the middle of the building site to start building
- Attacking unit can pursue it's target
- Pathfinding algorithm improved, units now can find alternative position to move if target position is occupied by another unit
- Weapons finally cause damage. (Units still can't be killed)

Build 30 (20.02.2013)
- Removed div selection when clicking many time on unit box on right panel
- Ability to pause game, by pressing P key.
- Added dialog module, when game paused corresponding dialog is appeared

Build 29 (12.02.2013)
- Added shadow for all buildings
- Added shadow for units. Unfortunately can't find shadow image for Freighter, for now it will be without shadow. 
- Added healing cursor
- Added damage table. Preparing for weapon implementation.
- Added small horizontal bridge building. Still can't correctly build it, some improvements required for pathfinding algorithm.
- Small code optimizations

Build 28 (06.02.2013)
- Preloading right panel images for buildings and units
- Do not start game load until start screen is loaded completely
- Added animation to Advanced Training Facility building