@@ -25,6 +25,7 @@
 		<script type="text/javascript" src="js/effects/splatd_explosion.js"></script>
 		<script type="text/javascript" src="js/effects/death_with_sparks_explosion.js"></script>
 		<script type="text/javascript" src="js/effects/craters.js"></script>
+		<script type="text/javascript" src="js/effects/repricon.js"></script>
 		
 		<script type="text/javascript" src="js/weapons/abstract.js"></script>
 		<script type="text/javascript" src="js/weapons/laser_rifle.js"></script>
