@@ -6,7 +6,10 @@ var PANNING_FIELD_SIZE = 30;
 var RUNS_PER_SECOND = 50;
 var ANIMATION_SPEED = 50; //mspf
 
-var HEAL_SPEED = 10;
+var HEAL_SPEED = 23;
+
+var BUILDING_REPAIR_SPEED = 15;
+var BUILDING_REPAIR_COST = 12;
 
 var ACTION_STATE_NONE = 0;
 var ACTION_STATE_SELL = 1;
